dnl
dnl  $Id: configure.in,v 1.28 2004/12/25 17:37:53 holtmann Exp $
dnl

AC_PREREQ(2.50)
AC_INIT()

AM_INIT_AUTOMAKE(bluez-libs, 2.13)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_INIT_BLUEZ

AC_LANG_C

AC_PROG_CC
AC_PROG_INSTALL

m4_define([_LT_AC_TAGCONFIG], [])
m4_ifdef([AC_LIBTOOL_TAGS], [AC_LIBTOOL_TAGS([])])

AC_PROG_LIBTOOL

AC_ARG_BLUEZ

CFLAGS="-Wstrict-prototypes --no-strict-aliasing -D_LIBC_REENTRANT -g -Wall -Os  -meb  -msoft-float  -mabi=32  -march=lx4189  -Wa,-32  -Wa,-march=lx4189  -Wa,-mips1  -D__TARGET__ -DVERSION=\"$(VERSION)\""

AC_SUBST(CFLAGS)

AC_OUTPUT(Makefile include/Makefile src/Makefile bluez.pc)
