dnl
dnl  $Id: configure.in,v 1.50 2004/12/25 17:47:52 holtmann Exp $
dnl

AC_PREREQ(2.50)
AC_INIT()

AM_INIT_AUTOMAKE(bluez-utils, 2.13-J)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_INIT_BLUEZ

AC_LANG_C

AC_PROG_CC
AC_PROG_CC_PIE
AC_PROG_INSTALL
AC_PROG_YACC
AM_PROG_LEX

AC_PATH_BLUEZ
AC_PATH_OPENOBEX
AC_PATH_ALSA
AC_PATH_USB
AC_PATH_DBUS

AC_ARG_BLUEZ

CFLAGS="-Wstrict-prototypes --no-strict-aliasing -D_LIBC_REENTRANT -g -Wall -Os  -meb  -msoft-float  -mabi=32  -march=lx4189  -Wa,-32  -Wa,-march=lx4189  -Wa,-mips1  -D__TARGET__ -DVERSION=\"2.13-J\""

AC_SUBST(CFLAGS)

AC_OUTPUT(Makefile hcid/Makefile tools/Makefile rfcomm/Makefile sdpd/Makefile dund/Makefile pand/Makefile hidd/Makefile cups/Makefile test/Makefile scripts/Makefile pcmcia/Makefile extra/Makefile)
